...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Task"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/todo_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DA1C1C"
        android:fadingEdge="none"
        android:visibility="visible"
        app:cardBackgroundColor="#FBF9F9"
...

                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter title"

                    app:layout_constraintEnd_toEndOf="@+id/todo_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/todo_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/todo_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="Deadline"
                    android:inputType="date"
...
            </LinearLayout>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/todo_reminder"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="Reminder"
                    android:inputType="time"
...

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Description"
                    android:inputType="textLongMessage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/todo_reminder"
                    app:layout_constraintVertical_bias="0.0">

...
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/done_button_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/todo_priority"
                    app:layout_constraintStart_toEndOf="@+id/todo_description"
                    app:layout_constraintTop_toBottomOf="@+id/todo_priority" />
            </TableRow>
        </TableLayout>
...
