<resources>
    <string name="app_name">ProDucktive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ProDucktive</string>
    <string name="nav_header_subtitle">Take flight with your productivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
